camel-kafka-sample/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camel-kafka-app-service
spec:
  selector:
    app: camel-kafka-app
  ports:
    - protocol: TCP
      port: 80  # 外部から接続するポート
      targetPort: 8080  # コンテナのポート
  type: LoadBalancer  # クラスタ外部からアクセス可能にする
